Fix CTA flexbox spacing

--- a/assets/css/titles/title.css
+++ b/assets/css/titles/title.css
@@ -338,6 +338,34 @@
   position: relative;
 }
 
+.flexbox_layout_cta {
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  margin: 0 auto;
+  padding: 4em 0 0 0;
+}
+
+.flexbox_layout_overview {
+  -ms-flex-line-pack: distribute;
+      align-content: space-around;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  margin: 0 auto;
+  padding: 4em 0 0 0;
+}
+
 .flex-item_artwork {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -349,6 +377,19 @@
   padding-left: 15px;
   padding-right: 15px;
   width: 100%;
+}
+
+.flex-item_cta {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  /* -webkit-box-flex: 0;
+      -ms-flex: 0 0 100%;
+          flex: 0 0 100%; */
+  max-width: 100%;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+  /* width: 100%; */
 }
 
 .flex-item_synopsis {
@@ -373,6 +414,13 @@
     max-width: 50%;
   }
 
+  /* .flex-item_cta {
+    -ms-flex: 0 0 50%;
+    -webkit-box-flex: 0;
+            flex: 0 0 50%;
+    max-width: 50%;
+  } */
+  
   .flex-item_synopsis {
     -ms-flex: 0 0 50%;
     -webkit-box-flex: 0;
@@ -398,23 +446,4 @@
     max-width: 66.666666%;
   }
 
-}
-
-.flexbox_layout_overview {
-  -ms-flex-line-pack: distribute;
-      align-content: space-around;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  margin: 0 auto;
-  padding: 4em 0 0 0;
 }
